# todo_rust_rocket_diesel_mysql_pool

./: .env  Cargo.toml  README.md  Rocket.toml
migrations/20160720150332_create_tasks_table/: up.sql  up.sql~
src/: db.rs  db.rs~  main.rs  task.rs  task.rs~
